feat: implement mobile endpoints for auth
