# packages/shared/src/lib/types/http-request/mobile-login.type.ts
@@ -1,0 +1,4 @@
+export interface MobileLoginRequestBody {
+  email: string;
+  password: string;
+}
