# packages/shared/src/lib/types/http-request/mobile-register.type.ts
@@ -1,0 +1,6 @@
+export interface MobileRegisterRequestBody {
+  email: string;
+  firstName: string;
+  lastName: string;
+  password: string;
+}
