# packages/shared/src/lib/types/http-response/mobile-login.type.ts
@@ -1,0 +1,9 @@
+import { TokenType } from '@fusionauth/typescript-client';
+
+export interface MobileLoginResponse {
+  idToken: string;
+  tokenType: TokenType;
+  accessToken: string;
+  refreshToken: string;
+  accessTokenExpiresIn: number;
+}
